# compass

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  LICENSE  Makefile  README.md  conda.yml  constraints.txt  cookiecutter.yaml  mypy.ini  package.sh  pyproject.toml  release.sh  requirements-bridge.txt  requirements-dev-constraints.txt  requirements-dev.txt  requirements-editable.txt  requirements-prod.txt  requirements.txt  setup.cfg  setup.py
.devcontainer/: .bashrc.append  bash.sh  devcontainer.dockerfile  devcontainer.json  devcontainer.sh  miniconda.dockerfile  postCreateCommand.sh  pytorch.dockerfile
.github/workflows/: makefile.yml  python-publish.yml
compass/: __main__.py  exception.py  main.py  number.py
compass/model/: __init__.py  base.py  factory.py
compass/pipeline/: __init__.py  base.py  change.py  init.py  post.py  report.py  transaction.py
compass/source/: __init__.py  base.py  composite.py  factory.py  file.py  http.py
compass/step/: __init__.py  action.py  actual.py  balance.py  base.py  change.py  init.py  plan.py  price.py  print.py  quantity.py  report.py  target.py  validate.py
compass/transact/: __init__.py  base.py  deposit.py  post.py
data/: README.md
make/: venv-init.sh  venv.sh
notebook/: README.md
template/: main.py
tests/: conftest.py  pytest.ini  test_main.py  test_number.py  test_source.py  test_target.py
tests/data/: BITO39.json  actual.html  actual_ali.xlsx  actual_cei.xlsx  actual_default.xlsx  actual_price_rico.html  actual_warren.html  change.xlsx  compass.ini  output.xlsx  portfolio.xlsx  price.xlsx  price_warren.html  target.xlsx  transaction.xlsx
tests/source/: test_file.py  test_http.py
tests/step/: test_actual.py  test_base.py  test_change.py  test_price.py  test_report.py  test_validate.py
