[build-system]
requires = ["setuptools", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "compass-investor"
authors = [
    {name = "Dinaldo A. Pessoa", email = "dinaldoap@gmail.com"},
]
description = "Leading investors to theirs targets."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
]
dynamic = ["version", "dependencies"]

[project.urls]
repository = "https://github.com/dinaldoap/compass"

[project.scripts]
compass = "compass.__main__:main"

[tool.setuptools.packages.find]
include = ["compass*"]

[tool.setuptools_scm]
write_to = "compass/version.py"
version_scheme = "post-release"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements-prod.txt"]}
