[metadata]
name = compass
version = 0.1.0
license = 
description = Leading investors to theirs targets.
url = https://github.com/dinaldoap/compass
platforms = Linux
classifiers =
    Programming Language :: Python :: 3
author = Dinaldo Pessoa
author_email = dinaldoap@gmail.com

[options.entry_points]
console_scripts =
    compass = compass.__main__:main

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy
    pandas
    openpyxl
    requests
    lxml
    babel
    pandera